--- a/style.css
+++ b/style.css
@@ -27,6 +27,83 @@ body{
 .menu{
 	display: none;
 }
+.SectionFirst{
+	background-image: url(./Rectangle\ 7.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 90%;
+	height: 270px;
+	margin: auto;
+	margin-top: 40px;
+}
+.borderground{
+	border: 1px solid rgb(255, 246, 246);
+	width: 50px;
+	padding: 10px;
+	border-radius: 10px;
+}
+.borderground2{
+	width: 200px;
+	border: 1px solid rgb(250, 232, 232);
+	padding: 10px;
+	border-radius: 10px;
+}
+.pАкция{
+	font-size:18px ;
+	font-weight:400 ;
+	color: white;
+
+}
+.sectionChild{
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+.pUteplenie{
+	font-size: 44px;
+	font-weight: 700;
+	color: white;
+
+}
+.butЗаказать{
+	width: 318px;
+	height: 52px;
+	border: none;
+	background-color: #E53624;
+	border-radius: 100px;
+	font-size: 20px;
+	font-weight: 500;
+	color: white;
+}
+.Pskidka{
+	width: 238px;
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
+}
+.SectionFirst{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+	justify-content: space-around;
+}
+.textbot{
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+.butЗаказатьm{
+	width: 318px;
+	height: 52px;
+	border: none;
+	background-color: #E53624;
+	border-radius: 100px;
+	font-size: 20px;
+	font-weight: 500;
+	color: white;
+	display: none;
+}
 @media (max-width:510px) {
 .menu{
 	display: block;
@@ -42,5 +119,21 @@ body{
 	width: 95%;
 	margin: auto;
 	margin-top: 20px;
+}
+.SectionFirst{
+	flex-direction: column;
+	height: 400px;
+	width: 94%;
+	padding: 10px;
+}
+.Pskidka{
+	font-size: 12px;
+	width: 220px;
+}
+.butЗаказатьm{
+	display: block;
+}
+.butЗаказать{
+	display: none;
 }
 }
