--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ align-items: center;
 margin-top: 20px;
 }
 body{
-	background-color: #476178;
+	background-color: #0f2c45;
 }
 .header2{
 	display: flex;
@@ -104,6 +104,82 @@ body{
 	color: white;
 	display: none;
 }
+.pKomleks{
+	font-size:14px ;
+	font-weight: 400;
+	color: white;
+	width: 313px;
+}
+.pRemont{
+	font-size: 32px;
+	font-weight: 700;
+	color: white;
+}
+.pUslugi{
+	font-size:66px ;
+	font-weight: 700;
+	color: white;
+	width: 570px;
+	margin: auto;
+
+}
+.Rowgap{
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
+}
+.RowBox{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 30px;
+}
+.SectionSecond{
+	margin-top: 30px;
+}
+.pKomleks{
+	line-height: 20px;
+}
+.pDoma{
+	font-size:32px ;
+	font-weight: 700;
+	color:white ;
+}
+.pOdnoznachno{
+	font-size: 14px;
+	font-weight: 400;
+	color: white;
+	width: 315px;
+}
+.DomaFlex{
+	width: 500px;
+	background-color: #476178;
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	padding: 20px;
+}
+.Restengle{
+	display: flex;
+	justify-content: center;
+	margin-top: 60px;
+}
+.textbott{
+	margin-top: 70px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 40px;
+	align-items: center;
+}
+.butЗаказатьt{
+	width: 318px;
+	height: 52px;
+	border: none;
+	background-color: #E53624;
+	border-radius: 100px;
+	font-size: 20px;
+	font-weight: 500;
+	color: white;
+}
 @media (max-width:510px) {
 .menu{
 	display: block;
@@ -135,5 +211,33 @@ body{
 }
 .butЗаказать{
 	display: none;
+}
+.RowBox{
+	flex-direction: column;
+	gap: 40px;
+}
+.pUslugi{
+	font-size: 44px;
+	width: 339px;
+	text-align: center;
+}
+.SectionSecond{
+	width: 95%;
+	margin: auto;
+	margin-top: 30px;
+}
+.Restengle{
+	flex-direction: column;
+}
+.res{
+	width: 375px;
+	height: 235px;
+}
+.DomaFlex{
+	width: 330px;
+	height: 400px;
+}
+.textbott{
+	align-items: start;
 }
 }
