--- a/style.css
+++ b/style.css
@@ -306,6 +306,55 @@ line-height: 20px;
 
 
 }
+.SectionFifth{
+	width: 99.8%;
+	height: 750px;
+	background-color: white;
+	border: 1px solid rgb(245, 245, 245);
+}
+.pNews{
+	font-size:58px ;
+	font-weight: 700;
+	color: #191A1A;
+margin-left: 50px;
+}
+.p18{
+	font-size:14px ;
+	font-weight: 400;
+	color: #8B8E8E;
+}
+.pPrototip{
+	font-size:32px ;
+	font-weight: 700;
+	color: #2A2B2B;
+	width: 400px;
+}
+.FlexKomp{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 50px;
+}
+.sectionTop{
+	margin-top: 100px;
+	background-color: white;
+}
+.Divdevice{
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
+}
+.butЗаказ{
+	width: 318px;
+	height: 52px;
+	border: none;
+	background-color: #E53624;
+	border-radius: 100px;
+	font-size: 20px;
+	font-weight: 500;
+	color: white;
+	margin-top: 50px;
+	margin-left: 1100px;
+}
 @media (max-width:510px) {
 .menu{
 	display: block;
@@ -388,4 +437,24 @@ line-height: 20px;
 .redstage{
 	width: 400px;
 }
+.FlexKomp{
+	flex-direction: column;
+	gap: 50px;
+
+}
+.src{
+	width: 380px;
+}
+.pNews{
+	margin-left: 5px;
+}
+.SectionFifth{
+border: 1px solid red;
+background-color: white;
+
+}
+.butЗаказ{
+	margin-left: 20px;
+}
+
 }
