--- a/style.css
+++ b/style.css
@@ -355,6 +355,70 @@ margin-left: 50px;
 	margin-top: 50px;
 	margin-left: 1100px;
 }
+.Onas{
+	display: flex;
+	gap: 20px;
+	margin-top: 20px;
+}
+.pOnas{
+	font-size:20px ;
+	font-weight:400 ;
+	color:white ;
+
+}
+.hr1{
+	margin-top: 30px;
+}
+.FlexFooter{
+	display: flex;
+	
+	justify-content: space-around;
+}
+
+.pkaluga{
+	font-size: 18px;
+	font-weight: 400;
+	width: 217px;
+	color: white;
+line-height: 24px;
+}
+.pInst{
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
+	width: 100px;
+	line-height: 24px;
+}
+.InstFlex{
+	display: flex;
+justify-content: space-around;
+margin-top: 20px;
+align-items: center;
+}
+.Flex2023{
+	display: flex;
+	gap: 10px;
+}
+.PravaFlex{
+	display: flex;
+	gap: 30px;
+}
+.pprava{
+	font-size:14px ;
+	font-weight: 400;
+	color:#ECECEC ;
+
+}
+.DivEnd{
+	display: flex;
+	justify-content: space-between;
+	width: 92%;
+	margin: auto;
+	margin-top: 30px;
+}
+.Footer{
+	padding: 20px;
+}
 @media (max-width:510px) {
 .menu{
 	display: block;
@@ -449,12 +513,40 @@ margin-left: 50px;
 	margin-left: 5px;
 }
 .SectionFifth{
-border: 1px solid red;
+
 background-color: white;
 
 }
 .butЗаказ{
 	margin-left: 20px;
 }
-
+.Footer{
+	margin-top: 700px;
+}
+.FlexFooter{
+	flex-direction: column;
+}
+.Onas{
+	flex-direction: column;
+}
+.InstFlex{
+	flex-direction: column;
+	align-items: start;
+	row-gap: 20px;
+}
+.DivEnd{
+	flex-direction: column;
+}
+.PravaFlex{
+	flex-direction: column;
+}
+.Flex2023{
+	margin-top: 30px;
+}
+.Logo{
+	width: 200px;
+}
+.FonWeight{
+	margin-top: 20px;
+}
 }
